Fix the preview buttons alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,7 +310,10 @@ em {
 }
 
 .preview-btn {
+    display: flex;
+    justify-content: center;
     margin-top: 3rem;
+    margin-bottom: 3rem;
    
 }
 
